SONAR-13221 change PK of RULES and update FK